Added order() and position() methods
In this change, I added an order() method to ranges and
domains, and a position() method to arithmetic domains.
Both methods take an index as their argument.  If the
index is within the range/domain, the order() method
will return its ordinal value using 0-based indexing:
0, 1, 2, 3, ...  For multidimensional domains, this
uses row-major order numbering.  If the index is not
a member, -1 cast to the range/domain's per-dimension
index type is returned.  Thus:

     (0..3).order(3) == 3
     (1..3).order(3) == 2
     (3..3).order(3) == 0
     (4..3).order(3) == -1
     (1..3 by 2).order(3) == 1
     ([1..3, 1..3]).order((2,1)) == 3
     etc.

position() is similar, but returns a tuple indicating
a per-dimension ordering of the index components.
Thus,

     ([1..3, 1..3]).position((2,1)) == (1,0)
     ([1..3, 1..3]).position((4,3)) == (-1,2)

I've found these functions useful in mapping from
a domain's indices to a 0-based numbering in
computing distributions in which a locale's ownership
is a function of its 0-based position in the array
of locales being passed in (where we can't, in
general assume that that array is 0-based).  I suspect
they (or something like them) will also be useful in
leader/follower iterators where we need to translate
things back to 0-based indices in order to have a
lingua franca between multiple distributions.

Added a few simple tests of the functions.

I'm not particularly crazy about the names of these
functions (though I don't think they're half bad either),
so feel free to propose improvements.  I couldn't find
an equivalent in Matlab (and didn't look too hard in 
Fortran, but did look a bit).

Possible future directions:

- have domain.order(i) take an optional type argument
  indicating the type of the return type should
  domain.numIndices overflow dim_type.

- permit an optional "origin" argument that would
  indicate where the counting should start (0 and 1
  being the most likely possibilities -

--- a/spec/Domains_and_Arrays.tex
+++ b/spec/Domains_and_Arrays.tex
@@ -965,6 +965,20 @@ Returns whether or not index \chpl{i} is a member of the domain's
 index set.
 \end{protobody}
 
+\begin{protohead}
+def $Domain$.order(i: index($Domain$)): dim_type
+\end{protohead}
+\begin{protobody}
+If \chpl{i} is a member of the domain, returns the ordinal value of
+\chpl{i} using a total ordering of the domain's indices using 0-based
+indexing.  Otherwise, it returns \chpl{(-1):dim_type}.  For arithmetic
+domains, this ordering will be based on a row-major ordering of the
+indices; for other domains, the ordering may be
+implementation-dependent and unstable as elements are added and
+removed from the domain.
+\end{protobody}
+
+
 \subsubsection{Predefined Functions and Methods on Arithmetic Domains}
 
 We expect that this list of predefined functions and methods will
@@ -1011,6 +1025,15 @@ def $Domain$.high: index($Domain$)   // for multidimensional domains
 Returns the high index of the domain as a scalar value for 1D domains
 and as an index value for a multidimensional domain.
 \end{protobody}
+
+\begin{protohead}
+def $Domain$.position(i: index($Domain$)): rank*dim_type
+\end{protohead}
+\begin{protobody}
+Returns a tuple holding the order of index i in each range defining
+the domain.
+\end{protobody}
+
 
 \subsection{Predefined Functions and Methods on Arrays}
 \index{arrays!predefined functions}
