Added support for array slicing via an out-of-bounds degenerate range
As proposed in Andy's meeting yesterday, added support for
slicing into an array using a partially-bounded range where
the given bound may be out of bounds.  Thus, given:

  var A: [1..10] real;

  A[11..] = ...

would be legal since it is equivalent to:

  A[11..10] = ...

and 11..10 describes a degenerate range/empty set of indices.
Therefore, the indices described by the range are not out
of bounds.

In an earlier checkin (r12490), Steve posed the question as to
whether A[11..12] should also result in an empty subarray.  My
argument is that it shouldn't because 11..12 is a non-empty
range and it contains indices that are not within A's domain.
(By contrast "11" is not part of 1..10, but it's not part of
11..10 either).

Updated the spec to discuss this case (and out-of-bounds
indexing in general, which seemed not to be discussed in
the obvious places).

Added a few new tests of this behavior.




git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@14298 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/spec/Domains_and_Arrays.tex
+++ b/spec/Domains_and_Arrays.tex
@@ -542,7 +542,9 @@ In addition to being indexed by indices defined by their arithmetic
 domains, arithmetic arrays can be indexed directly by values of the
 dimensional index type where the number of values is equal to the rank
 of the array.  This has the semantics of first moving the values into
-a tuple and then indexing into the array.
+a tuple and then indexing into the array.  The index represented by
+the tuple must be an element of the array's domain or an out-of-bounds
+error will occur.
 
 \begin{example}
 Given the definition
@@ -557,10 +559,16 @@ equivalent.
 \label{Arithmetic_Array_Slicing}
 \index{arrays!slice}
 
-In addition to slicing an arithmetic array by an arithmetic domain,
-arithmetic arrays also support slicing by ranges directly.  If each
+An arithmetic array can be sliced by any arithmetic domain that is a
+subdomain of the array's defining domain.  If the subdomain
+relationship is not met, an out-of-bounds error will occur.  The
+result is a subarray whose indices are those of the slicing domain and
+whose elements are an alias of the original array's.  If the indices
+in the slicing
+
+Arithmetic arrays also support slicing by ranges directly.  If each
 dimension is indexed by a range, this is equivalent to slicing the
-domain by an arithmetic domain defined by those ranges.
+array by the arithmetic domain defined by those ranges.
 
 For multi-dimensional arithmetic arrays, slicing with a rank change is
 supported by substituting integral values within a dimension's range
