Updating spec TODO, adding LONGTERM file
Updating the spec TODO with some items from Thom and others
I may have had sitting around.

Also, adding a LONGTERM file to the spec directory to capture
things that we retire as semantic futures, but indicated the
possibility of supporting in the long-term (once we've
conquered all the truly hard problems and just want to make
Chapel more fun to use).



git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@14397 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/spec/TODO
+++ b/spec/TODO
@@ -11,3 +11,25 @@
 * refactor/rewrite domain/array chapter (Brad)
 
 * add description of local block
+
+* range chapter: more clearly state the default values of the range's
+  types and parameters (is it currently stated at all?)
+
+* describe how to specify a homogenous varargs type (e.g., x: int...n)?
+
+* add const intents to spec and define blank intents in terms of const
+  intents (and "by reference" for arrays/domains):
+
+  Steve's definition of const intents:
+  - scalars: copy in and disallow modification
+  - classes: copy reference in and disallow modification to reference
+  - records: copy in and disallow modification
+  - domains/arrays: pass by ref and disallow modification
+
+  Brad's mental definition had been the same except:
+  - records: pass by ref and disallow modification
+
+  Joint definition of blank intents:
+  - scalars, classes, records: same as blank:
+  - domains/arrays: pass by ref and allow modification
+
