Added another snapshot of my HPL work, this time hplExample4. Briefly: this is like hplExample3 minus a lot of the ugly. In more detail the differences are as follow:
- The matrix in LUFactorize is no longer patitioned in a two step process of
  defining ranges and explicitly defining a set of domains over these ranges.
  Rather its partioned by slicing into the overall domain.
- luLikeMultiply now defines two domains (one that's the same as the input
  matrix's domain except rounded up to the next multiple of blocksize along the
  horizontal axis, and one that does the same for the vertical.  With these
  domains the function has been rewritten to cleverly use slicing. 



git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@14408 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/test/studies/hpcc/HPL/stonea/serial/README
+++ b/test/studies/hpcc/HPL/stonea/serial/README
@@ -21,3 +21,7 @@ implementing Chapel's version of the HPL benchmark.  These snapshots are:
         size, get it down so it looks like the more manageble version we'll
         submit for HPCC.  I'm now convinced these tests pass anyway.)
 
+    hplExample4:
+        Modified version of hplExample3 that cleverly uses domain slicing to
+        make for more succinct code.
+
