Implemented variable-width boolean types; mapped bool to _Bool
On my plane flight home the other week I didn't have the FAQ I
wanted to work on and did have a week-stale snapshot of the
Chapel compiler, so decided to work on something constructive
but unrelated to the main things I was working on, and chose
booleans, since they have had a performance impact on tests
like Franz' FFT tests.  This was also a good exercise for
forcing me to get a little bit more familiar with the function
resolution code.

Since we discovered this performance gap, I've been taking the
stance that we should support the "bool" type to have an
implementation-defined width, while also supporting "bool(n)"
types.  Unlike int types, the bool(n) type does not affect
the values that can be stored in the type, only the amount of
memory used to store the bool.  Thus, an array of bool(8)s
would use far less memory than an array of bool(64)s.  This
would allow a programmer to make time-space tradeoffs if need
be.

Implemented this functionality for bools of size 8, 16, 32, and
64, and made our default "bool" type map to C99's _Bool type,
under the assumption that that was going to be portable and
efficient (i.e., hopefully the C implementors have made a wise
time-space tradeoff and also optimized the _Bool implementation
when possible).

Since all bools store the same values, I made all bool types
implicitly coerce to one another.  This is attractive because
it prevents us from needing to rewrite the standard module
routines that accept a bool -- they can still accept a bool
and be passed any of the available widths.

For awhile, I added a generic "boolean" type like our "integral"
type, but then I realized that because of the implicit coercions,
this isn't particularly useful (that I could think of) and was
likely to only add overhead in the form of code replicants.

I added a bunch of tests to make sure that bools of different
widths could interassign, interoperate, and be applied to all
the stan

--- a/spec/Conversions.tex
+++ b/spec/Conversions.tex
@@ -35,7 +35,8 @@ statement~(\rsec{Implicit_Statement_Bool_Conversions}).
 
 The implicit numeric conversions are as follows:
 \begin{itemize}
-\item From \chpl{bool} to \chpl{int(8)}, \chpl{int(16)}, \chpl{int(32)}, \chpl{int(64)}, \chpl{uint(8)}, \chpl{uint(16)}, \chpl{uint(32)}, \chpl{uint(64)}, or \chpl{string}
+\item From \chpl{bool} to \chpl{bool(k)}, \chpl{int(8)}, \chpl{int(16)}, \chpl{int(32)}, \chpl{int(64)}, \chpl{uint(8)}, \chpl{uint(16)}, \chpl{uint(32)}, \chpl{uint(64)}, or \chpl{string} for any legal value of $k$
+\item From \chpl{bool(j)} to \chpl{bool}, \chpl{bool(k)}, \chpl{int(8)}, \chpl{int(16)}, \chpl{int(32)}, \chpl{int(64)}, \chpl{uint(8)}, \chpl{uint(16)}, \chpl{uint(32)}, \chpl{uint(64)}, or \chpl{string} for any legal values of $j$ and $k$
 \item From \chpl{int(8)} to \chpl{int(16)}, \chpl{int(32)}, \chpl{int(64)}, \chpl{real(64)}, \chpl{complex(128)}, or \chpl{string}
 \item From \chpl{int(16)} to \chpl{int(32)}, \chpl{int(64)}, \chpl{real(64)}, \chpl{complex(128)}, or \chpl{string}
 \item From \chpl{int(32)} to \chpl{int(64)}, \chpl{real(64)}, \chpl{complex(128)}, or \chpl{string}
