--- a/spec/Variables.tex
+++ b/spec/Variables.tex
@@ -87,7 +87,7 @@ are as follows:
 \hline
 {\bf Type} & {\bf Default Value} \\
 \hline
-{\tt bool} & {\tt false} \\
+{\tt bool(*)} & {\tt false} \\
 {\tt int(*)} & {\tt 0} \\
 {\tt uint(*)} & {\tt 0} \\
 {\tt real(*)} & {\tt 0.0} \\
