Specified in the spec that sunday in Day enumeration is defined to be zero.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@14466 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/spec/Standard_Modules.tex
+++ b/spec/Standard_Modules.tex
@@ -684,10 +684,10 @@ supplied to routines in this module to specify the desired time units.
 \end{protobody}
 
 \begin{protohead}
-enum Day { sunday, monday, tuesday, wednesday, thursday, friday, saturday };
+enum Day { sunday=0, monday, tuesday, wednesday, thursday, friday, saturday };
 \end{protohead}
 \begin{protobody}
-The enumeration Day defines the days of the week.
+The enumeration Day defines the days of the week, with Sunday defined to be 0.
 \end{protobody}
 
 
