Adding some more TODO items to spec that have come up in recent discussions
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@14491 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/spec/TODO
+++ b/spec/TODO
@@ -33,3 +33,7 @@
   - scalars, classes, records: same as blank:
   - domains/arrays: pass by ref and allow modification
 
+* Does spec talk about declaring methods for types other than
+  classes/records?
+
+* List "by" among the overloaded operators?
