--- a/spec/Ranges.tex
+++ b/spec/Ranges.tex
@@ -68,7 +68,7 @@ of range type that can represent ranges of 64-bit integers, with both
 high and low bounds specified, and the ability to have a stride other
 than 1.
 \begin{chapel}
-var r: range(int(64), BoundedType.bounded, stridable=true);
+var r: range(int(64), BoundedRangeType.bounded, stridable=true);
 \end{chapel}
 \end{example}
 
@@ -81,7 +81,6 @@ Range literals are specified as follows:
 range-literal:
   bounded-range-literal
   unbounded-range-literal
-  counted-range-literal
 \end{syntax}
 
 \subsubsection{Bounded Range Literals}
@@ -103,7 +102,7 @@ The element type of the range type is determined by the type of the
 low and high bound.  It is either \chpl{int}, \chpl{uint},
 \chpl{int(64)}, or \chpl{uint(64)}.  The type is determined by
 conceptually adding the low and high bounds together.  The boundedness
-of such a range is \chpl{BoundedType.bounded}.  The stridability of
+of such a range is \chpl{BoundedRangeType.bounded}.  The stridability of
 the range is \chpl{false}.
 
 \subsubsection{Unbounded Range Literals}
@@ -118,9 +117,9 @@ unbounded-range-literal:
   ..
 \end{syntax}
 
-The first form results in a \chpl{BoundedType.boundedLow} range, the
-second in a \chpl{BoundedType.boundedHigh} range, and the third in
-a \chpl{BoundedType.boundedNone} range.
+The first form results in a \chpl{BoundedRangeType.boundedLow} range, the
+second in a \chpl{BoundedRangeType.boundedHigh} range, and the third in
+a \chpl{BoundedRangeType.boundedNone} range.
 
 Unbounded ranges can be iterated over with zipper iteration and their
 shape conforms to the shape of the other iterators they are being
@@ -140,29 +139,6 @@ have a stride with the same sign.
 Unbounded ranges can also be used to index into ranges, domains,
 arrays, and strings.  In these cases, elided bounds are inherited
 from the bounds of the expression being indexed.
-
-\subsubsection{Counted Range Literals}
-\label{Counted_Ranges}
-\index{ranges!counted}
-
-A counted range is specified by the syntax:
-\begin{syntax}
-counted-range-literal:
-  expression .. # expression
-\end{syntax}
-
-Counted ranges are bounded ranges defined with a lower bound and a count of the
-number of values to span.
-
-\begin{example}
-The code
-\begin{chapel}
-var r = 3..#4;
-writeln(r);
-\end{chapel}
-creates a range r from three that spans four values. The output is "3..6".
-\end{example}
-
 
 \subsection{Range Methods}
 \index{low@\chpl{low}}
@@ -225,6 +201,47 @@ $3,2,1$.  But then \chpl{R by -1} would be different than \chpl{3..1
 by -1} even though it should be identical by substituting the value in
 R into the expression.
 \end{rationale}
+
+\subsubsection{Count Operator}
+\label{Count_Operator}
+\index{ranges!count operator}
+
+The \chpl{#} operator can be applied to a range that has a high bound,
+a low bound, or both.  Its syntax is:
+\begin{syntax}
+expression `#' expression
+\end{syntax}
+
+The \chpl{#} operator takes a range and an integral count and creates a
+new range with count elements. The stride of the resulting range is the
+same as that of the initial range. It is an error for the count to be
+negative.
+
+When applied to a \chpl{BoundedRangeType.bounded} range with a positive
+stride, the low bound count elements are taken starting from the low
+bound. When the stride is negative, count elements are taken starting
+from the high bound.
+
+When applied to a \chpl{BoundedRangeType.boundedLow} range, the low bound
+is fixed and and the high bound is set based on the count and the
+absolute value of the stride.
+
+When applied to a \chpl{BoundedRangeType.boundedHigh} range, the high
+bound is fixed and the low bound is set based on the count and the
+absolute value of the stride.
+
+It is an error to apply the count operator to a
+\chpl{BoundedRangeType.boundedNone} range.
+
+\begin{example}
+The following declarations result in equivalent ranges.
+\begin{chapel}
+var r = 2.. by -2 # 3;
+var r2 = ..6 by -2 # 3;
+var r3 = 0..6 by -2 # 3;
+\end{chapel}
+Each of these ranges represents the ordered set of three values: 6, 4, 2.
+\end{example}
 
 \subsubsection{Arithmetic Operators}
 \label{Range_Arithmetic}
