Correcting description of $'s use
Moved it from the beginning of the identifier for a sync to the end.



git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@14668 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/spec/Lexical_Structure.tex
+++ b/spec/Lexical_Structure.tex
@@ -69,7 +69,7 @@ digit: one of
 
 \begin{rationale}
 The inclusion of the \$ character is meant to assist programmers using
-sync and single variables by presenting a style (a \$ at the beginning
+sync and single variables by presenting a style (a \$ at the end
 of such variables) in order to help write properly synchronized code.
 It is felt that making such variables ``stand out'' is useful since
 such variables could result in deadlocks.
