Changing type of range returned by # operator
The previous version of the # operator returned a range
with the same eltType as the input range.  With this
check-in, I make the eltType of the result be the type
of the input eltType + the integer value being passed in.
Thus 0..m where m is an int(64) now generates an int(64)
range rather than an error message.  0..n where n is a
uint(64) still generates an error message (though a
different one) since int(32) can't be added to uint(64).

Added a test of these two cases, where the latter is a
future indicating that we should improve our error messages
for illegal combinations of integers to # by specializing
them in the ChapelRange module rather than having them
fall out due to lower-level function resolution.

Updated the spec to specify what the index type of the #
operator is.



git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@14675 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/spec/Ranges.tex
+++ b/spec/Ranges.tex
@@ -212,10 +212,12 @@ a low bound, or both.  Its syntax is:
 expression `#' expression
 \end{syntax}
 
-The \chpl{#} operator takes a range and an integral count and creates a
-new range with count elements. The stride of the resulting range is the
-same as that of the initial range. It is an error for the count to be
-negative.
+The \chpl{#} operator takes a range and an integral count and creates
+a new range with count elements. The stride of the resulting range is
+the same as that of the initial range. It is an error for the count to
+be negative.  The \emph{eltType} of the resulting range is the same
+type that would be obtained by adding the integral count value to the
+range's \emph{eltType}.
 
 When applied to a \chpl{BoundedRangeType.bounded} range with a positive
 stride, the low bound count elements are taken starting from the low
