spec todo updates
Added array.eltType to predefined methods on arrays
Added array.rank to predefined methods on arrays
Added domain.rank to predefined methods on domains
Added range.eltType to predefined methods on ranges
Added range.boundedType to predefined methods on ranges
Added range.stridable to predefined methods on ranges


git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@14900 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/spec/Domains_and_Arrays.tex
+++ b/spec/Domains_and_Arrays.tex
@@ -993,6 +993,13 @@ We expect that this list of predefined functions and methods will
 grow.
 
 \begin{protohead}
+def $Domain$.rank param
+\end{protohead}
+\begin{protobody}
+Returns the rank of the domain.
+\end{protobody}
+
+\begin{protohead}
 def $Domain$.dim(d: int): range
 \end{protohead}
 \begin{protobody}
@@ -1048,6 +1055,20 @@ the domain.
 
 There is an expectation that this list of predefined functions and
 methods will grow.
+
+\begin{protohead}
+def $Array$.eltType type
+\end{protohead}
+\begin{protobody}
+Returns the element type of the array.
+\end{protobody}
+
+\begin{protohead}
+def $Array$.rank param
+\end{protohead}
+\begin{protobody}
+Returns the rank of the array.
+\end{protobody}
 
 \begin{protohead}
 def $Array$.domain: this.domain
