--- a/spec/Reductions_and_Scans.tex
+++ b/spec/Reductions_and_Scans.tex
@@ -54,13 +54,11 @@ minimum/maximum value in the first position and the location of the
 value in the second position.
 
 \begin{example}
-
 The first line below computes the smallest element in an array
 \chpl{A} as well as its index, storing the results in \chpl{minA} and
 \chpl{minALoc}, respectively.  It then computes the largest element in
 a forall expression making calls to a function \chpl{foo()}, storing
 the value and its number in \chpl{maxVal} and \chpl{maxValNum}.
-
 \begin{chapel}
 var (minA, minALoc) = minloc reduce (A, A.domain); 
 var (maxVal, maxValNum) = maxloc reduce ([i in 1..n] foo(i), 1..n);
@@ -96,6 +94,22 @@ that can be iterated over and to which the operator can be applied.
 User-defined scans are specified by preceding the keyword \chpl{scan}
 by the class type that implements the scan interface as described
 in~\rsec{udr}.
+
+\begin{example}
+Given an array
+\begin{chapel}
+var A: [1..3] int = 1;
+\end{chapel}
+that is initialized such that each element contains one, then the code
+\begin{chapel}
+writeln(+ scan A);
+\end{chapel}
+outputs the results of scanning the array with the sum operator.  The
+output is
+\begin{chapel}
+1 2 3
+\end{chapel}
+\end{example}
 
 \subsection{User-Defined Reductions and Scans}
 \label{udr}
